# microservices/2_expose_entities/src/main/resources/api-spec.yaml
@@ -1,6 +1,6 @@
-swagger: '2.0'
+openapi: 3.0.0
 info:
-  version: '1.0.0'
+  version: 1.0.0-oas3
   title: Expose cinematographic data
   description: An API which expose actors, characters and movies
 host: localhost:8080
@@ -19,19 +19,38 @@ tags:
 paths:
   /actors:
     get:
-      description: get all actors
-      operationId: getActors
-      tags:
-        - actors
-      produces:
-        - application/json
+      summary: Get all actors
+      operationId: getActorByUser
+      parameters:
+        - in: query
+          name: page
+          description: page number
+          required: false
+          type: integer
+        - in: query
+          name: pageSize
+          description: size of page
+          required: false
+          type: integer
+      description: get all the actors
       responses:
         '200':
-          description: success
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Actor'
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/definitions/Actor'
+          links:
+            NextLink:
+              $ref: '#/definitions/PageActorRequest'
+            LastLink:
+              $ref: '#/definitions/PageActorRequest'
+            FirstLink:
+              $ref: '#/definitions/PageActorRequest'
+            PrevLink:
+              $ref: '#/definitions/PageActorRequest'
     post:
       description: create an actor
       operationId: createActor
@@ -332,6 +351,12 @@ paths:
         200:
           description: updated
 definitions:
+  PageActorRequest:
+    description:
+    operationId: getActorByUser
+    parameters:
+      page: '$request.path.page'
+      pageSize: '$request.path.page'
   Actor:
     type: object
     properties:
